infra/k8s/server-2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-2-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: server-2
  template:
    metadata:
      labels:
        app: server-2
    spec:
      containers:
        - name: server-2
          image: christapherantony/server-2
---
apiVersion: v1
kind: Service
metadata:
  name: server-2-srv
spec:
  selector:
    app: server-2
  ports:
    - name: server-2
      protocol: TCP
      port: 4000
      targetPort: 4000
