infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: sample.dev
      http:
        paths:
          - path: /server-1
            pathType: Prefix
            backend:
              service:
                name: server-1-srv
                port:
                  number: 3000
          - path: /server-2
            pathType: Prefix
            backend:
              service:
                name: server-2-srv
                port:
                  number: 4000
